2002-03-03  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): add sanitize-la.sh

2002-03-03  Anders Carlsson  <andersca@gnu.org>

	* gdk/x11/gdkwindow-x11.c (gdk_window_move_resize): Fix tyop
	in docs.

Sat Mar  2 03:49:31 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): move edit
	ifs above _set_cursor code, don't collapse/expand row on double
	click, only activate (#63269)
	(validate_visible_area): add two missing lines (#73161, #73162)

Sun Mar  3 12:13:56 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix typo where pangoxft was being
	required instead of pangox. (Reported by Miles
	Lane)

Sun Mar  3 12:06:02 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_expose): Draw cursors
	_under_ the text, not over.

Sun Mar  3 11:26:20 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_class_init): add
	a secondary-cursor-color property.

Sun Mar  3 11:12:16 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextlayout.c (add_cursor): When in split cursor
	mode, always add the cursor as both strong and weak
	so that it is drawn with the correct non-split color.

Sun Mar  3 11:05:13 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/Makefile.am (moduledir): Fix
	install location.

Sun Mar  3 10:28:32 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/Makefile.am: add missing dependency of objects on
	gtkmarshalers.h.

	* gtk/Makefile.am gtk/gtk-boxed.defs: Remove completely
	out of date and unused gtk-boxed.defs and the accompanying
	Makefile rule to generate the complete gtk.defs.

2002-03-03  Hans Breuer  <hans@breuer.org>

	* gtk/gtkmain.c : make rewrite_event_for_window() static
	* gtk/gtkrc.c : gtk_rc_clear_realized_style() static

	* gtk/makefile.msc.in : adapt to makeenums build changes

	* gtk.def : sorted alphabetical again

2002-03-03  Sven Neumann  <sven@gimp.org>

	* m4macros/gtk-2.0.m4: lowercase configure --help output.
