@@ -1,3 +1,9 @@
+Sun Mar  3 20:48:12 2002  Soeren Sandmann  <sandmann@daimi.au.dk>
+
+	* gtk/gtkmenu.c (gtk_menu_set_submenu_navigation_region): change
+	offset of cursor corner of navigation region from (-2, 2) to 
+	(-2, 0).
+
 2002-03-03  jacob berkman  <jacob@ximian.com>
 
 	* Makefile.am (EXTRA_DIST): add sanitize-la.sh
